<resources>
    <string name="app_name">ELS</string>
    <string name="app_fullname">Emergency Location System</string>
    <string name="version">beta 2.0</string>
    <string name="location_permission">Please enable location access so we could provide your location in case of emergency.</string>
    <string name="locdeny">Without this permission, the system will not be able to locate you in case of emergency.</string>
    <string name="enablenotif">Enable Notifications</string>
    <string name="notif_permission">Please allow the app to show notifications on the lockscreen.</string>
    <string name="n_step1">• Go to Settings</string>
    <string name="n_step2">• Open Notification settings</string>
    <string name="n_step3">• App Notifications</string>
    <string name="n_step4">• Enable notifications for ELS app</string>
    <string name="n_step5">This notification will contain all the necessary information in case of emergency.</string>
    <string name="connect">Please connect to the internet</string>
    <string name="invalidcode">Invalid verification code</string>
    <string name="info_details">This will serve as your in case of emergency details.</string>
    <string name="required">Please fill-up all the required fields</string>
    <string name="viewinfo">View Info</string>
    <string name="firstname">Firstname:</string>
    <string name="lastname">Lastname:</string>
    <string name="bday">Birthdate:</string>
    <string name="bdayformat">MM/DD/YYYY</string>
    <string name="age">Age:</string>
    <string name="sex">Sex:</string>
    <string name="state">State:</string>
    <string name="type">Blood Type:</string>
    <string name="medcon">Medical Conditions:</string>
    <string name="ar">Allergies &amp; Reactions:</string>
    <string name="mednote">Medical Notes:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="notiftitle">Emergency Location System</string>
    <string name="restitle">Resident Information</string>
    <string name="contactname">Contact Name</string>
    <string name="contactnum">Contact Number</string>
    <string name="titlecontact">Emergency Contact</string>
    <string name="subcontact">Your emergency contact will be notified in case of emergency.</string>
    <string-array name="weight_units">
        <item>kg</item>
        <item>lb</item>
    </string-array>
    <string-array name="height_units">
        <item>cm</item>
        <item>m</item>
        <item>ft</item>
        <item>in</item>
    </string-array>

    <string-array name="bloodtypes">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
        <item>Not known</item>
    </string-array>
    <string-array name="sex_entries">
        <item>Decline to state</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="conditions">
        <item>Hypertension</item>
        <item>Hyperlipidemia</item>
        <item>Diabetes</item>
        <item>Back Pain</item>
        <item>Anxiety</item>
        <item>Obesity</item>
        <item>Allergic Rhinitis</item>
        <item>Reflux Esophagitis</item>
        <item>Respiratory Problems</item>
        <item>Hypothyroidism</item>
        <item>Visually Impaired</item>
        <item>Visual Refractive Errors</item>
        <item>Osteoarthritis</item>
        <item>Fibromyalgia / Myositis</item>
        <item>Malaise and Fatigue</item>
        <item>Pain in Joint</item>
        <item>Acute Laryngopharyngitis</item>
        <item>Acute Maxillary Sinusitis</item>
        <item>Major Depressive Disorder</item>
        <item>Acute Bronchitis</item>
        <item>Asthma</item>
        <item>Depressive Disorder</item>
        <item>Nail Fungus</item>
        <item>Coronary Atherosclerosis</item>
        <item>Urinary Tract Infection</item>
    </string-array>
    <string-array name="aller">
        <item>Grass and Tree Pollen</item>
        <item>Dust mites</item>
        <item>Animal Dander</item>
        <item>Tiny flakes of skin or hair</item>
        <item>Nuts, Fruits, Shellfish, Eggs and Cows Milk</item>
        <item>Insect bites and Stings</item>
        <item>Ibuprofen</item>
        <item>Aspirin</item>
        <item>Antibiotics</item>
        <item>Latex</item>
        <item>Mould</item>
    </string-array>
    <string-array name="emergencies">
        <item>Accident</item>
        <item>Crime</item>
        <item>Landslide</item>
        <item>Noise Complaint</item>
        <item>Power Outage</item>
        <item>Report</item>
        <item>Water Interruption</item>
    </string-array>


    <string name="title_activity_maps">Map</string>
    <string name="my_info">My Info</string>
    <string name="contacts">Contacts</string>
    <string name="my_place">My Place</string>
    <string name="settings">Settings</string>
    <string name="your_place">Your Place</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="emergency">Emergency</string>
    <string name="view_info">View Info</string>
    <string name="notifications">Notifications</string>
    <string name="location">Location</string>
    <string name="close">Close</string>
    <string name="blurred_black">Blurred Black</string>
    <string name="menu_settings_icon">Menu settings icon</string>
    <string name="message_optional">Message (optional)</string>
    <string name="detected">We\'ve detected an application in your phone that uses mock location. \n\nTo prevent having false alarms in the system we will not permitting any user that uses false locations.</string>
    <string name="cs_helpertext">As part of <b>COVID-19</b> prevention and awareness, we are requiring you to take a survey regarding on your current health status during this pandemic.</string>

</resources>